tests/type-errors/07-branch-mismatch.flt
// If branch type mismatch
// --- Command: dotnet run --project FunLang -- --emit-type --expr "if true then 1 else false" 2>&1
// --- ExitCode: 1
// --- Output:
error[E0301]: Type mismatch: expected int but got bool
 --> <expr>:1:0-25
   = hint: Check that all branches of your expression return the same type
